
.cert-config.json
....
            "update": {
                "file": "cert/server.p12", 
                "password": "server",
                "type": "p12"
            }
....


NOTE: To enable the previous behavior, use the `--cert-config-update` parameter of the configuration tool or the `axway.tools.cfg.cert.updateConfigured` property of the plugin.
|===

== Version 0.6.0

[cols="1,2,<10a", options="header"]
|===
|ID|Type|Description
|https://github.com/Axway-API-Management-Plus/apigw-maven-plugin/issues/15[#15]
|Enhancement
|Optionally skip `package` goal.

For CI/CD pipelines it would be usefully to separate the package and deployment phase.
A property `axway.skipPackaging` is provided to skip the `package` goal in case of the target archive already exists.

NOTE: There is no check if source files are newer than the target archive.
So ensure that the package goal was executed before.

|https://github.com/Axway-API-Management-Plus/apigw-maven-plugin/issues/16[#16]
|Enhancement
|Support simulation mode for configuration tool.

In simulation mode no output files (`.fed` or `.env`) are written.
Also non existing certificate files will be ignored.

To ensure proper configuration files, unconfigured fields or certificates will still raise a build error.

NOTE: The `buildtemplate` tool is removed as it can be fully replaced by the `buildfed` tool.
|===

== Version 0.5.0

[cols="1,2,<10a", options="header"]
|===
|ID|Type|Description

|https://github.com/Axway-API-Management-Plus/apigw-maven-plugin/issues/1[#1]
|Enhancement
|Configuration tool now supports passphrases for input archives (.pol and .env) and for output archives (.fed and .env).

Example:

  buildfed -e gateway.env -p gateway.pol -c gateway.config.json -passphrase-in=foo -passphrase-out=bar --output-fed=gateway.fed

Uses the passphrase "foo" to open the `gateway.env` and `gateway.pol` archive and uses the passphrase "bar" to write the configured `gateway.fed` file.

Limitation:
